# gupy-responde

./: Makefile  README.md  mkdocs.yml  output.txt  pyproject.toml
app/: app.py  chargpt.py  chatgpt.py  get_data.py  output.txt  requirements.txt  streamlit.py
docs/: index.md
docs/css/: custom.css
