[tool.poetry]
name = "gupy-responde"
version = "0.1.0"
description = ""
authors = ["lvgalvaofilho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "gupy_responde"}]

[tool.poetry.dependencies]
python = "^3.11"
makefile = "^1.1.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
openai = "^0.28.1"
pymdown-extensions = "^10.3"
mkdocs-material = "^9.4.2"
pygments = "^2.16.1"
mkdocstrings-python = "^1.7.0"
isort = "^5.12.0"
python-dotenv = "^1.0.0"
streamlit = "^1.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
